--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "My first blockchain coding as a part of a blockChain course on Udemy",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watchAll"
   },
   "repository": {
     "type": "git",
